--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrations": "node --loader ts-node/esm --experimental-specifier-resolution=node src/migrations/run.ts"
   },
   "keywords": [],
   "author": "",
